// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hLQSwg kMQJwr"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      active="[object Object]"
      class="sc-guDLey sc-dmyCSP fttOdy kOIaAE sc-gLLuof hoIicD"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="normal"
      horizontalpadding="16px"
      hover="[object Object]"
      normal="[object Object]"
      paddingbottomatactive="9px"
      paddingtopatactive="11px"
      verticalpadding="10px"
    >
      Save
      <div
        class="sc-fsYfdN MBHLy"
        pr="0.5"
      />
      <span
        class="sc-iBdnpw cWhIRg"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-ktwOfi cxKCVL"
  >
    <div
      class="sc-brSamD iiLmRR"
      id=":r2:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-qZrbh fYkgel"
        maxheight="none"
      >
        <hr
          class="sc-eTNRI zPNkZ"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-eTNRI zPNkZ"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save as draft
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hLQSwg kMQJwr"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      active="[object Object]"
      class="sc-guDLey sc-dmyCSP fttOdy jESRVH sc-gLLuof hoIicD"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="normal"
      horizontalpadding="16px"
      hover="[object Object]"
      normal="[object Object]"
      paddingbottomatactive="9px"
      paddingtopatactive="11px"
      verticalpadding="10px"
    >
      Save
      <div
        class="sc-fsYfdN MBHLy"
        pr="0.5"
      />
      <span
        class="sc-iBdnpw cWhIRg"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-ktwOfi hgcElz"
  >
    <div
      class="sc-fmKFGs khouzx fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-hABBmJ beQaTY"
      />
    </div>
    <div
      class="sc-brSamD iiLmRR"
      id=":r0:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-qZrbh fYkgel"
        maxheight="none"
      >
        <hr
          class="sc-eTNRI zPNkZ"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-eTNRI zPNkZ"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save as draft
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hLQSwg kMQJwr"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      active="[object Object]"
      class="sc-guDLey sc-dmyCSP fttOdy iVVNsb sc-eDLKkx eNoqKS"
      disabled=""
      font-size="14px"
      font-weight="normal"
      horizontalpadding="16px"
      hover="[object Object]"
      normal="[object Object]"
      paddingbottomatactive="9px"
      paddingtopatactive="11px"
      verticalpadding="10px"
    >
      Save
    </button>
    <button
      active="[object Object]"
      class="sc-guDLey sc-dmyCSP fttOdy iVVNsb sc-jTQCzO chhBFq"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="normal"
      horizontalpadding="16px"
      hover="[object Object]"
      normal="[object Object]"
      paddingbottomatactive="9px"
      paddingtopatactive="11px"
      verticalpadding="10px"
    >
      <span
        class="sc-iBdnpw cWhIRg"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-ktwOfi cxKCVL"
  >
    <div
      class="sc-brSamD iiLmRR"
      id=":r6:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-qZrbh fYkgel"
        maxheight="none"
      >
        <hr
          class="sc-eTNRI zPNkZ"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-eTNRI zPNkZ"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save as draft
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hLQSwg kMQJwr"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      active="[object Object]"
      class="sc-guDLey sc-dmyCSP fttOdy ifcwnE sc-eDLKkx eNoqKS"
      font-size="14px"
      font-weight="normal"
      horizontalpadding="16px"
      hover="[object Object]"
      normal="[object Object]"
      paddingbottomatactive="9px"
      paddingtopatactive="11px"
      verticalpadding="10px"
    >
      Save
    </button>
    <button
      active="[object Object]"
      class="sc-guDLey sc-dmyCSP fttOdy ifcwnE sc-jTQCzO chhBFq"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="normal"
      horizontalpadding="16px"
      hover="[object Object]"
      normal="[object Object]"
      paddingbottomatactive="9px"
      paddingtopatactive="11px"
      verticalpadding="10px"
    >
      <span
        class="sc-iBdnpw cWhIRg"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-ktwOfi hgcElz"
  >
    <div
      class="sc-fmKFGs khouzx fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-hABBmJ beQaTY"
      />
    </div>
    <div
      class="sc-brSamD iiLmRR"
      id=":r4:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-qZrbh fYkgel"
        maxheight="none"
      >
        <hr
          class="sc-eTNRI zPNkZ"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-eTNRI zPNkZ"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save as draft
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-csKJxZ dSYXhT"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-beySPh gYdMCB sc-irLvIq"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
